--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "elysia": "latest",
     "ioredis": "^5.4.1",
     "node-cron": "^3.0.3"
