--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bullmq": "^5.7.15",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "elysia": "latest",
