--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,30 @@ services:
       - "9001:9001"
     environment:
       REDIS_HOST: redis
+      POSTGRES_HOST: db
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
     depends_on:
       - redis
+      - db
 
   redis:
     image: "redis:latest"
     ports:
       - "6379:6379"
+
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: wally_db
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: blackfeather247
+      POSTGRES_PASSWORD: blackfeather247
+    ports:
+      - "9002:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
