--- a/.env
+++ b/.env
@@ -8,4 +8,9 @@ SCRAPE_TOTAL_PAGES_EACH_TIME_WALLHAVEN_LATEST = 100
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://blackfeather247:blackfeather247@127.0.0.1:9002/wally_db?schema=public&connect_timeout=300"
+DB_USER = blackfeather247
+DB_PASSWORD = blackfeather247
+DB_NAME = wally_db
+DB_PORT = 9002
+DB_HOST = db
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}?schema=public&connect_timeout=300"
