--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -33,12 +31,15 @@ services:
   db:
     image: postgres:latest
     environment:
-      POSTGRES_DB: wally_db
-      POSTGRES_PORT: 5432
-      POSTGRES_USER: blackfeather247
-      POSTGRES_PASSWORD: blackfeather247
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_PORT: ${DB_PORT}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "9002:5432"
+      - ${DB_PORT}:5432
+    expose:
+      - 9002
     volumes:
       - pgdata:/var/lib/postgresql/data
 
