--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "elysia": "latest",
     "ioredis": "^5.4.1",
     "nanoid": "3.0.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "socket.io-client": "^4.7.5",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/node-cron": "^3.0.11",
